--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "chai-http": "^4.3.0",
+    "dotenv": "^16.0.3",
     "expect": "^29.3.1",
     "express": "^4.18.2",
     "jsonfile": "^6.1.0",
-    "nodemon": "^2.0.20"
+    "jsonwebtoken": "^9.0.0",
+    "nodemon": "^2.0.20",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
