--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "chai-http": "^4.3.0",
     "dotenv": "^16.0.3",
     "expect": "^29.3.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "jsonfile": "^6.1.0",
     "jsonwebtoken": "^9.0.0",
-    "nodemon": "^2.0.20",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
