--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "morgan": "^1.10.0",
     "nanoid": "^4.0.1",
     "nodemon": "^2.0.20",
+    "sqlite": "^4.1.2",
+    "sqlite3": "^5.1.4",
     "swagger-autogen": "^2.23.0",
     "swagger-ui-express": "^4.6.0",
     "uuid": "^9.0.0"
